2004 Nov 9 Stefan Urbanek

    * Remove STMethodSignatureForSelector as it was deprecated because of
    inportability to OSX.
    
2004 Nov 2 Stefan Urbanek

    * Changed super of STBytecodes from NSData to NSObject - there were some
    OSX issues

2004 Jul 10 Stefan Urbanek

    * Applied patch from Alexander V. Diemand (fixed bug #9595) - fixed
    maximum number of literals, fixed longjmp

2004 Jun 28 Stefan Urbanek

    * Fixed expresion duplicating.

2004 Jun 27 Stefan Urbanek

    * Version 0.8.1

2004 Jun 20 Stefan Urbanek

    * Added a fix to the compiler from Mateu Batle

2004 May 27 Stefan Urbanek

    * Fixed bug with signed/unsigned bytecode, which made StepTalk to crash if
      has more than 127 literals in the array. (patch by Mateu Batle)

2003 Sep 28 Stefan Urbanek <urbanek@host.sk>

    * NSNumber: fixed -NSNumber to:step:do: - now accepts negative step.
    (Patch by Alexander Diemand)

2003 Sep 24 Stefan Urbanek <urbanek@host.sk>
    
    * Guard compilation with an autorelease pool
    
2003 Sep 23 Stefan Urbanek <urbanek@host.sk>

    * STBytecodeInterpreter: fixed memory leak (reported by Alexander Diemand)

2003 Aug 5 Stefan Urbanek <urbanek@host.sk>

    * STScriptObject renamed to STSmalltalkScriptObject, because of steptalk
    core change.

2003 May 17 Stefan Urbanek <urbanek@host.sk>

    * STSourceReader: treat decimal point followed by whitespace as '.' dot - 
    end of statement.

2003 May 9   Stefan Urbanek <urbanek@host.sk>

    * NSString+additions: added   

2003 May 4  Stefan Urbanek <urbanek@host.sk>

    * SmalltalkEngine: remove exception guard to allow debugging
    
2003 Apr 29 Stefan Urbanek <urbanek@host.sk>

    * STSourceReader: fixed reading of identifiers at the end of source

2003 Apr 21 Stefan Urbanek <urbanek@host.sk>

    * Version 0.7.1

2003 Apr 6 Stefan Urbanek <urbanek@host.sk>

    * STCompiler: compileString: fixed exception reporting.

2003 Apr 04  David Ayers  <d.ayers@inode.at>
